# functor-classes-compat

./: .travis.yml  LICENSE  README.md  cabal.haskell-ci  changelog.md  functor-classes-compat.cabal
.github/workflows/: haskell-ci.yml
src-explicit/containers/Data/Sequence/Functor/: Classes.hs
src-explicit/containers/Data/Set/Functor/: Classes.hs
src-explicit/containers/Data/Tree/Functor/: Classes.hs
src-explicit/unordered-containers/Data/HashSet/Functor/: Classes.hs
src-implicit/containers/Data/IntMap/Functor/: Classes.hs
src-implicit/containers/Data/Map/Functor/: Classes.hs
src-implicit/containers/Data/Sequence/Functor/: Classes.hs
src-implicit/containers/Data/Tree/Functor/: Classes.hs
src-implicit/unordered-containers/Data/HashSet/Functor/: Classes.hs
src-none/containers/Data/IntMap/Functor/: Classes.hs
src-none/containers/Data/Map/Functor/: Classes.hs
src-none/containers/Data/Sequence/Functor/: Classes.hs
src-none/containers/Data/Set/Functor/: Classes.hs
src-none/containers/Data/Tree/Functor/: Classes.hs
src-none/unordered-containers/Data/HashMap/Functor/: Classes.hs
src-none/unordered-containers/Data/HashSet/Functor/: Classes.hs
src-none/vector/Data/Vector/Functor/: Classes.hs
src-old/Data/HashMap/Functor/: Classes.hs
src-old/Data/Set/Functor/: Classes.hs
src-old/Data/Vector/Functor/: Classes.hs
src/Data/HashMap/Functor/: Classes.hs
src/Data/IntMap/Functor/: Classes.hs
src/Data/Map/Functor/: Classes.hs
src/Data/Vector/Functor/: Classes.hs
test/: SelfTest.hs
travis/constraints/ghc-7.4.2/: containers-0.5.7  containers-0.5.9  transformers-0.4  transformers-0.5  unordered-containers-0.2.7.0  unordered-containers-0.2.8.0
travis/constraints/ghc-7.6.3/: transformers-0.3
travis/constraints/repository/: containers-0.5.7  containers-0.5.9  transformers-0.3  transformers-0.4  transformers-0.5  unordered-containers-0.2.7.0  unordered-containers-0.2.8.0
